--- a/css/app.css
+++ b/css/app.css
@@ -392,7 +392,7 @@ a {
 }
 #sidebar {
   background-image:url('../img/background.jpg');
-  background-size:contain;
+  background-size:cover;
   background-attachment:fixed;}
 
 #sidebar, #sidebar a {
